Stop user select on tabs. TODO: Fix overflow on window content?

--- a/src/routes/GUI.css
+++ b/src/routes/GUI.css
@@ -24,7 +24,6 @@
   justify-content: space-between;
   align-items: center;
   user-select: none;
-  padding: 10;
   font-weight: bold;
 }
 
@@ -80,13 +79,18 @@
   transition: background-color 0.3s ease;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  align-self: self-start;
+  word-break: break-word;
+  text-overflow: ellipsis;
 }
 
 .gui_card:hover
 {
   background-color: #7e22ce;
+  border-radius: 6px;
+  cursor: pointer;
 }
 
 .gui_tabs-container
@@ -106,6 +110,7 @@
   width: 25vw;
   height: 100%;
   gap: 8px;
+  user-select: none;
 }
 
 .gui_tabs-content
@@ -139,10 +144,11 @@
 
 .gui_tab-panel
 {
-  padding: 16px;
   background-color: inherit;
   color: white;
   border-radius: 8px;
+  height: 100%;
+  overflow-y: auto;
 }
 
 .gui_file_explorer_container
